--- a/attendance/css/main.css
+++ b/attendance/css/main.css
@@ -921,6 +921,7 @@ select:-webkit-autofill:focus {
 button,
 input[type="submit"],
 input[type="reset"],
+input[type="file"],
 input[type="button"] {
   display: inline-block;
   font-family: "Nunito Sans", sans-serif;
@@ -947,11 +948,13 @@ input[type="button"] {
 button:hover,
 input[type="submit"]:hover,
 input[type="reset"]:hover,
+input[type="file"]:hover,
 input[type="button"]:hover,
 .btn:focus,
 button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
+input[type="file"]:focus,
 input[type="button"]:focus {
   background-color: #b8b8b8;
   border-color: #b8b8b8;
@@ -965,6 +968,7 @@ input[type="button"]:focus {
 button.btn--primary,
 input[type="submit"].btn--primary,
 input[type="reset"].btn--primary,
+input[type="file"].btn--primary,
 input[type="button"].btn--primary {
   background: #793ea5;
   border-color: #793ea5;
@@ -975,11 +979,13 @@ input[type="button"].btn--primary {
 button.btn--primary:hover,
 input[type="submit"].btn--primary:hover,
 input[type="reset"].btn--primary:hover,
+input[type="file"].btn--primary:hover,
 input[type="button"].btn--primary:hover,
 .btn.btn--primary:focus,
 button.btn--primary:focus,
 input[type="submit"].btn--primary:focus,
 input[type="reset"].btn--primary:focus,
+input[type="file"].btn--primary:focus,
 input[type="button"].btn--primary:focus {
   background: #6b3792;
   border-color: #6b3792;
